--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
   <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700,800,300' rel='stylesheet' type='text/css'>
 
   <!-- JQuery -->
-  <script src="//code.jquery.com/jquery-1.11.2.min.js"></script>
+  <script src="http://code.jquery.com/jquery-1.11.2.min.js"></script>
 
   <!-- STYLES -->
   <!-- build:css lib/css/main.min.css -->
