--- a/src/index.html
+++ b/src/index.html
@@ -110,7 +110,7 @@
       <div class="page-content">
 
         <!-- Header Bar -->
-        <div class="row header hidden">
+        <div class="row header">
           <div class="col-xs-12">
             <div class="meta">
               <div class="page m-t-sm">
