Added styling and additional functionalities
- CSS styling
- Added features of controlling beacons through checking off/on hosts
- Added a master switch

--- a/src/index.html
+++ b/src/index.html
@@ -47,6 +47,7 @@
   <script type="text/javascript" src="js/controllers/beacon_map.js"></script>
   <script type="text/javascript" src="js/controllers/beacon_widget.js"></script>
   <script type="text/javascript" src="js/controllers/beacon_faq.js"></script>
+  <script type="text/javascript" src="js/controllers/beacon_admin.js"></script>
 
   <style>
     #page-wrapper.open {
@@ -110,7 +111,7 @@
       <div class="page-content">
 
         <!-- Header Bar -->
-        <div class="row header">
+        <div class="row header hidden">
           <div class="col-xs-12">
             <div class="meta">
               <div class="page m-t-sm">
