Changed widget title

--- a/src/widget.html
+++ b/src/widget.html
@@ -16,7 +16,7 @@
 <body ng-app="app" ng-controller="queryCtrl">
 
     <header>
-        <div id="pageTitle">Beacon of Beacons</div>
+        <div id="pageTitle">Beacon Network</div>
     </header>
 
     <div id="content">
