--- a/src/widget.html
+++ b/src/widget.html
@@ -9,7 +9,7 @@
     <script src="js/widget/query.js"></script>
 
     <!-- build:widget lib/css/widget.min.css -->
-    <link rel="stylesheet" type="text/css" media="all" href="css/widget/widget.css"/>
+    <link rel="stylesheet" type="text/css" media="all" href="css/widget.css"/>
     <!-- endbuild -->
 </head>
 
