Added beacon performance page

--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,9 @@
   <link rel="stylesheet" type="text/css" href="../bower_components/bootstrap-select/dist/css/bootstrap-select.css">
   <link rel="stylesheet" type="text/css" href="css/custom.css">
   <link rel="stylesheet" type="text/css" href="css/beacons.css">
+  <link rel="stylesheet" type="text/css" href="css/admin.css">
   <!-- endbuild -->
+  
   <!-- SCRIPTS -->
   <!-- build:js lib/js/main.min.js -->
   <script type="text/javascript" src="../bower_components/angular/angular.min.js"></script>
