--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,7 @@
   <link rel="stylesheet" type="text/css" href="../bower_components/rdash-ui/dist/css/rdash.min.css">
   <link rel="stylesheet" type="text/css" href="../bower_components/bootstrap-select/dist/css/bootstrap-select.css">
   <link rel="stylesheet" type="text/css" href="css/custom.css">
+  <link rel="stylesheet" type="text/css" href="css/beacons.css">
   <!-- endbuild -->
   <!-- SCRIPTS -->
   <!-- build:js lib/js/main.min.js -->
@@ -32,6 +33,8 @@
   <!-- Custom Scripts -->
   <script type="text/javascript" src="js/module.js"></script>
   <script type="text/javascript" src="js/routes.js"></script>
+
+  <script type="text/javascript" src="js/services/mocked_api.js"></script>
 
   <!-- Beacon -->
   <script type="text/javascript" src="js/beacon_network.js"></script>
