mproved readability of the widget
- Removed "reference" in query parameters to avoid overcrowding
- Widened the result table
- Adjusted font size and layout
- Auto-adjustment of some font according to the widget width

--- a/src/widget.html
+++ b/src/widget.html
@@ -25,10 +25,9 @@
 
     <div id="content">
         <div id="queryParam">
-            <span>Chromosome: {{chr}}</span>
-            <span>Reference: {{ref}}</span>
-            <span>Position: {{pos}}</span>
-            <span>Allele: {{allele}}</span>
+            <div>Chromosome: {{chr}}</div>
+            <div>Position: {{pos}}</div>
+            <div>Allele: {{allele}}</div>
         </div>
 
         <div id="loading">
