Added needed js links
- Added d3 link
- Added new js files for beacon performance page

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,9 @@
 
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700,800,300' rel='stylesheet' type='text/css'>
 
+  <!-- D3 -->
+  <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+
   <!-- JQuery -->
   <script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
 
@@ -55,7 +58,9 @@
   <script type="text/javascript" src="js/controllers/beacon_map.js"></script>
   <script type="text/javascript" src="js/controllers/beacon_widget.js"></script>
   <script type="text/javascript" src="js/controllers/beacon_faq.js"></script>
-  <script type="text/javascript" src="js/controllers/beacon_admin.js"></script>
+  <script type="text/javascript" src="js/controllers/admins_control.js"></script>
+  <script type="text/javascript" src="js/controllers/admins_performance.js"></script>
+  <script type="text/javascript" src="js/directives/donut_chart.js"></script>
 
   <style>
     #page-wrapper.open {
