--- a/src/index.html
+++ b/src/index.html
@@ -68,7 +68,7 @@
 <body ng-controller="MasterCtrl" ng-init="app.contact_email='info@beacon-network.org'">
   <div id="page-wrapper" ng-class="{'open': toggle}" class="" ng-cloak>
     <!-- Sidebar -->
-    <div id="sidebar-wrapper" >
+<!--    <div id="sidebar-wrapper" >
       <ul class="sidebar">
         <li class="sidebar-main">
           <a ng-click="toggleSidebar()">
@@ -76,20 +76,22 @@
             <span class="menu-icon glyphicon glyphicon-transfer"></span>
           </a>
         </li>
+-->
        <!-- <li class="sidebar-title"><span>MENU</span></li>-->
         <!--<li class="sidebar-list" ui-sref-active="active">
           <a ui-sref="index">Search <span class="menu-icon fa fa-fw fa-search"></span></a>
         </li>-->
-        <li class="sidebar-list" ui-sref-active="active">
+<!--        <li class="sidebar-list" ui-sref-active="active">
           <a ui-sref="beacons.search">Beacon Network <span class="menu-icon fa fa-fw fa-search"></span></a>
         </li>
+-->
         <!--<li class="sidebar-list" ui-sref-active="active">
           <a ui-sref="ethics">Privacy & Ethics TD <span class="menu-icon fa fa-fw fa-users"></span></a>
         </li>
         <li class="sidebar-list" ui-sref-active="active">
           <a ui-sref="security">Security TD <span class="menu-icon fa fa-fw fa-lock"></span></a>
         </li>-->
-        <li class="sidebar-list" ui-sref-active="active">
+<!--        <li class="sidebar-list" ui-sref-active="active">
           <a ui-sref="developers.api_beacon">Developers <span class="menu-icon fa fa-fw fa-code"></span></a>
         </li>
       </ul>
@@ -111,6 +113,7 @@
         </div>
       </div>
     </div>
+-->
     <!-- End Sidebar -->
 
     <div id="content-wrapper">
