Added angular material and updated packages
- Added Angular Material as a dependency
- Updated angular-cookies and font-awesome
- Modified gulpfile.js to include more font-awesome files
- Source angular and angular materials in `src/index.html`

--- a/src/index.html
+++ b/src/index.html
@@ -6,39 +6,51 @@
 
   <title update-title></title>
 
+  <!--  STYLES  -->
 
-  <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700,800,300' rel='stylesheet' type='text/css'>
+  <!-- Google fonts -->
+  <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700,800,300' rel='stylesheet' type='text/css'>
 
-  <!-- D3 -->
-  <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
-
-  <!-- JQuery -->
-  <script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
-
-  <!-- STYLES -->
   <!-- build:css lib/css/main.min.css -->
   <link rel="stylesheet" type="text/css" href="../bower_components/bootstrap/dist/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="../bower_components/font-awesome/css/font-awesome.min.css">
   <link rel="stylesheet" type="text/css" href="../bower_components/rdash-ui/dist/css/rdash.min.css">
   <link rel="stylesheet" type="text/css" href="../bower_components/bootstrap-select/dist/css/bootstrap-select.css">
+  <link rel="stylesheet" type="text/css" href="../bower_components/angular-material/angular-material.min.css">
   <link rel="stylesheet" type="text/css" href="css/custom.css">
   <link rel="stylesheet" type="text/css" href="css/beacons.css">
   <link rel="stylesheet" type="text/css" href="css/admin.css">
   <!-- endbuild -->
   
-  <!-- SCRIPTS -->
-  <!-- build:js lib/js/main.min.js -->
-  <script type="text/javascript" src="../bower_components/angular/angular.min.js"></script>
+
+
+  <!--  SCRIPTS  -->
+
+  <!-- D3 -->
+  <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+
+  <!-- JQuery -->
+  <script src="http://code.jquery.com/jquery-1.11.2.min.js"></script>
+
+  <!-- Angular Material dependencies -->
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-animate.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-aria.min.js"></script>
+
+
+  <!-- build:js lib/js/main.min.js -->  
   <script type="text/javascript" src="../bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
   <script type="text/javascript" src="../bower_components/angular-cookies/angular-cookies.min.js"></script>
   <script type="text/javascript" src="../bower_components/bootstrap-select/dist/js/bootstrap-select.js"></script>
   <script type="text/javascript" src="../bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
   <!-- endbuild -->
 
+  <!-- Angular Material Javascript now available via Google CDN; version 0.10 used here -->
+  <script src="https://ajax.googleapis.com/ajax/libs/angular_material/0.10.0/angular-material.min.js"></script>
+
   <!-- Custom Scripts -->
   <script type="text/javascript" src="js/module.js"></script>
   <script type="text/javascript" src="js/routes.js"></script>
-
   <script type="text/javascript" src="js/services/mocked_api.js"></script>
 
   <!-- Beacon -->
