Added a basic d3 histogram directive w hardcoded data

--- a/src/index.html
+++ b/src/index.html
@@ -71,6 +71,7 @@
   <script type="text/javascript" src="js/controllers/admins_control.js"></script>
   <script type="text/javascript" src="js/controllers/admins_performance.js"></script>
   <script type="text/javascript" src="js/directives/donut_chart.js"></script>
+  <script type="text/javascript" src="js/directives/histogram.js"></script>
 
   <style>
     #page-wrapper.open {
