fixed invalid link

--- a/src/index.html
+++ b/src/index.html
@@ -136,7 +136,7 @@
 
         <div class="footer" style="padding-bottom: 10px; margin-bottom: 10px; color:rgb(100,100,100); font-size: 12px">
           <center>
-            <a href="http://genomicsanhealth.org">Global Alliance for Genomics & Health</a> | <a href="mailto:{{app.contact_email}}">Feedback</a> | <a ui-sref="terms">Terms of Use</a><!-- | Hosted by <a href="http://www.dnastack.com">DNAstack</a>-->
+            <a href="http://genomicsandhealth.org">Global Alliance for Genomics & Health</a> | <a href="mailto:{{app.contact_email}}">Feedback</a> | <a ui-sref="terms">Terms of Use</a><!-- | Hosted by <a href="http://www.dnastack.com">DNAstack</a>-->
           </center>
         </div>
       </div><!-- End Page Content -->
