--- a/src/index.html
+++ b/src/index.html
@@ -37,6 +37,7 @@
   
   <!-- build:js lib/js/main.min.js -->  
   <script type="text/javascript" src="../bower_components/angular/angular.min.js"></script>
+  <script type="text/javascript" src="../bower_components/angular-resource/angular-resource.min.js"></script>
   <script type="text/javascript" src="../bower_components/angular-animate/angular-animate.min.js"></script>
   <script type="text/javascript" src="../bower_components/angular-aria/angular-aria.min.js"></script>
   <script type="text/javascript" src="../bower_components/angular-material/angular-material.min.js"></script>
@@ -50,6 +51,7 @@
   <script type="text/javascript" src="js/module.js"></script>
   <script type="text/javascript" src="js/routes.js"></script>
   <script type="text/javascript" src="js/services/mocked_api.js"></script>
+  <script type="text/javascript" src="js/services/mocked_api_resource.js"></script>
 
   <!-- Beacon -->
   <script type="text/javascript" src="js/beacon_network.js"></script>
