Renamed the directive and included it in index.html

--- a/src/index.html
+++ b/src/index.html
@@ -30,12 +30,9 @@
   <!-- D3 -->
   <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
 
-  <!-- JQuery -->
-  <script src="http://code.jquery.com/jquery-1.11.2.min.js"></script>
-
-
-  
+ 
   <!-- build:js lib/js/main.min.js -->  
+  <script type="text/javascript" src="../bower_components/jquery/dist/jquery.min.js"></script>
   <script type="text/javascript" src="../bower_components/angular/angular.min.js"></script>
   <script type="text/javascript" src="../bower_components/angular-animate/angular-animate.min.js"></script>
   <script type="text/javascript" src="../bower_components/angular-aria/angular-aria.min.js"></script>
@@ -72,7 +69,8 @@
   <script type="text/javascript" src="js/controllers/admins_performance.js"></script>
   <script type="text/javascript" src="js/directives/donut_chart.js"></script>
   <script type="text/javascript" src="js/directives/histogram.js"></script>
-
+  <script type="text/javascript" src="js/directives/ui-cytoband.js"></script>
+  <script type="text/javascript" src="js/directives/date_range.js"></script>
   <style>
     #page-wrapper.open {
       padding-left: 0px;
