Added data and sourced lodash for cytoband directive

--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
  
   <!-- build:js lib/js/main.min.js -->  
   <script type="text/javascript" src="../bower_components/jquery/dist/jquery.min.js"></script>
+  <script type="text/javascript" src="../bower_components/lodash/lodash.min.js"></script>
   <script type="text/javascript" src="../bower_components/angular/angular.min.js"></script>
   <script type="text/javascript" src="../bower_components/angular-animate/angular-animate.min.js"></script>
   <script type="text/javascript" src="../bower_components/angular-aria/angular-aria.min.js"></script>
@@ -59,6 +60,8 @@
 
   <!-- Services -->
   <script type="text/javascript" src="js/services/api.js"></script>
+  <script type="text/javascript" src="js/services/mocked_api.js"></script>
+  <script type="text/javascript" src="js/services/chr_bands.js"></script>
 
   <!-- Controllers TODO: lazy load -->
   <script type="text/javascript" src="js/controllers/dashboard.js"></script>
@@ -69,6 +72,8 @@
   <script type="text/javascript" src="js/controllers/beacon_faq.js"></script>
   <script type="text/javascript" src="js/controllers/admins_control.js"></script>
   <script type="text/javascript" src="js/controllers/admins_performance.js"></script>
+
+  <!-- Directives --> 
   <script type="text/javascript" src="js/directives/donut_chart.js"></script>
   <script type="text/javascript" src="js/directives/histogram.js"></script>
   <script type="text/javascript" src="js/directives/ui-cytoband.js"></script>
