--- a/src/index.html
+++ b/src/index.html
@@ -72,6 +72,7 @@
   <script type="text/javascript" src="js/controllers/beacon_faq.js"></script>
   <script type="text/javascript" src="js/controllers/admins_control.js"></script>
   <script type="text/javascript" src="js/controllers/admins_performance.js"></script>
+  <script type="text/javascript" src="js/controllers/admins_genome.js"></script>
 
   <!-- Directives --> 
   <script type="text/javascript" src="js/directives/donut_chart.js"></script>
