pointing to beacon-network.org

--- a/src/widget.html
+++ b/src/widget.html
@@ -55,7 +55,7 @@
 
     <footer>
         <div id="bobInfo"> 
-            <a href="http://beacon-network.org/" target="_blank">More Info</a>
+            <a href="https://beacon-network.org/" target="_blank">More Info</a>
         </div>
     </footer>
 
