--- a/src/index.html
+++ b/src/index.html
@@ -7,10 +7,10 @@
   <title update-title></title>
 
 
-  <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700,800,300' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700,800,300' rel='stylesheet' type='text/css'>
 
   <!-- JQuery -->
-  <script src="http://code.jquery.com/jquery-1.11.2.min.js"></script>
+  <script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
 
   <!-- STYLES -->
   <!-- build:css lib/css/main.min.css -->
