Created a date time range directive
- Has basic form control
- Has css styling
- Added required js to `index.html` for date picker

--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
   <!-- D3 -->
   <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
 
+
  
   <!-- build:js lib/js/main.min.js -->  
   <script type="text/javascript" src="../bower_components/jquery/dist/jquery.min.js"></script>
@@ -28,6 +29,8 @@
   <script type="text/javascript" src="../bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
   <!-- endbuild -->
 
+  <!-- For the date picker  --> 
+  <script src="http://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.13.3.js" type="text/javascript"></script>
 
   <!--  STYLES  -->
 
@@ -79,6 +82,7 @@
   <script type="text/javascript" src="js/directives/histogram.js"></script>
   <script type="text/javascript" src="js/directives/ui-cytoband.js"></script>
   <script type="text/javascript" src="js/directives/date_range.js"></script>
+  <script type="text/javascript" src="js/directives/date_time_range.js"></script>
   <style>
     #page-wrapper.open {
       padding-left: 0px;
