commented out the sidebar, fixed d3 url

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
   <!--  SCRIPTS  -->
 
   <!-- D3 -->
-  <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js" charset="utf-8"></script>
 
 
  
@@ -30,13 +30,13 @@
   <!-- endbuild -->
 
   <!-- For the date picker  --> 
-  <script src="http://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.13.3.js" type="text/javascript"></script>
+  <script src="https://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.13.3.js" type="text/javascript"></script>
 
   <!--  STYLES  -->
 
   <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/0.9.4/angular-material.min.css">
   <!-- Google fonts -->
-  <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700,800,300' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700,800,300' rel='stylesheet' type='text/css'>
   
   <!-- build:css lib/css/main.min.css -->
   <link rel="stylesheet" type="text/css" href="../bower_components/bootstrap/dist/css/bootstrap.min.css">
@@ -100,6 +100,7 @@
 <body ng-controller="MasterCtrl" ng-init="app.contact_email='info@beacon-network.org'">
   <div id="page-wrapper" ng-class="{'open': toggle}" class="" ng-cloak>
     <!-- Sidebar -->
+    <!--
     <div id="sidebar-wrapper">
       <ul class="sidebar">
         <li class="sidebar-main">
@@ -149,6 +150,7 @@
         </div>
       </div>
     </div>
+    -->
     <!-- End Sidebar -->
 
     <div id="content-wrapper">
